--- a/QtApp/QtPCGToVSTUI.ui
+++ b/QtApp/QtPCGToVSTUI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>400</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,18 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>600</width>
+    <height>500</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>600</width>
+    <height>500</height>
+   </size>
   </property>
   <property name="acceptDrops">
    <bool>false</bool>
@@ -92,7 +104,7 @@
       <x>390</x>
       <y>130</y>
       <width>191</width>
-      <height>41</height>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -106,9 +118,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>180</y>
-      <width>571</width>
-      <height>151</height>
+      <y>210</y>
+      <width>570</width>
+      <height>230</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -138,6 +150,58 @@
         <string>Combis:</string>
        </property>
       </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="horizontalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>170</y>
+      <width>371</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="labelTarget">
+       <property name="maximumSize">
+        <size>
+         <width>80</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Target VST:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioTriton">
+       <property name="text">
+        <string>Triton</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioTritonExtreme">
+       <property name="text">
+        <string>Triton Extreme</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Orientation::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </widget>
